--- a/composer.json
+++ b/composer.json
@@ -7,19 +7,17 @@
     ],
     "homepage": "https://github.com/spatie/laravel-query-builder",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "Alex Vanderbist",
-            "email": "alex@spatie.be",
-            "homepage": "https://spatie.be",
-            "role": "Developer"
-        }
-    ],
+    "authors": [{
+        "name": "Alex Vanderbist",
+        "email": "alex@spatie.be",
+        "homepage": "https://spatie.be",
+        "role": "Developer"
+    }],
     "require": {
         "php": "^7.1",
-        "illuminate/database": "~5.6.34|~5.7.0|~5.8.0",
-        "illuminate/http": "~5.6.34|~5.7.0|~5.8.0",
-        "illuminate/support": "~5.6.34|~5.7.0|~5.8.0"
+        "illuminate/database": "~5.6.34|~5.7.0|~5.8.0|~6.0|~7.0",
+        "illuminate/http": "~5.6.34|~5.7.0|~5.8.0|~6.0|~7.0",
+        "illuminate/support": "~5.6.34|~5.7.0|~5.8.0|~6.0|~7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0|^8.0",
