--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "role": "Developer"
     }],
     "require": {
-        "php": "^7.1",
+        "php": "^7.1 | ^8.0",
         "illuminate/database": "~5.6.34|~5.7.0|~5.8.0|~6.0|~7.0|~8.0",
         "illuminate/http": "~5.6.34|~5.7.0|~5.8.0|~6.0|~7.0|~8.0",
         "illuminate/support": "~5.6.34|~5.7.0|~5.8.0|~6.0|~7.0|~8.0"
