--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,13 @@
     }],
     "require": {
         "php": "^7.1 | ^8.0",
-        "illuminate/database": "~5.6.34|~5.7.0|~5.8.0|~6.0|~7.0|~8.0",
-        "illuminate/http": "~5.6.34|~5.7.0|~5.8.0|~6.0|~7.0|~8.0",
-        "illuminate/support": "~5.6.34|~5.7.0|~5.8.0|~6.0|~7.0|~8.0"
+        "illuminate/database": "~5.6.34|~5.7.0|~5.8.0|~6.0|~7.0|~8.0|~9.0",
+        "illuminate/http": "~5.6.34|~5.7.0|~5.8.0|~6.0|~7.0|~8.0|~9.0",
+        "illuminate/support": "~5.6.34|~5.7.0|~5.8.0|~6.0|~7.0|~8.0|~9.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0|^8.0|^9.0",
-        "orchestra/testbench": "~3.6.0|~3.7.0|~3.8.0",
+        "orchestra/testbench": "~3.6.0|~3.7.0|~3.8.0|~4.0",
         "ext-json": "*"
     },
     "autoload": {
